--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-刘娇 是 好人
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>fairygil的互联网体验小屋</title>
+</head>
+<body>
+神马都没有
+</body>
+</html>
