--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>fairygil的胡言乱语</li>
-          <li><a href="mailto:zw0948[at]gmail.com">fairyliujiao[at]gmail.com</a></li>
+          <li><a href="mailto:fairyliujiao[at]gmail.com">fairyliujiao[at]gmail.com</a></li>
         </ul>
       </div>
 
